# GstRtp

./: README.md  toolchain-ubuntu.cmake
GstRtpLib/: CMakeLists.txt  RtpVideo.cpp  RtpVideo.h
GstRtpLib_VersionC/: CMakeLists.txt  RtpVideo.c  RtpVideo.h
GstRtpTest/client/: CMakeLists.txt  RtpVideo.h  main.cpp
GstRtpTest/server/: CMakeLists.txt  JenDebug.h  RtpVideo.h  main.cpp
